Improve report templates and add JSON report option

--- a/src/examples/Calc/templates/feature.html
+++ b/src/examples/Calc/templates/feature.html
@@ -19,7 +19,7 @@
             </div>
             <p class="navbar-text" style="float: left">Features Overview
             </p>
-            <p class="navbar-text">Cucumber BDD Test Report</p>
+            <p class="navbar-text">Cucumber Cpp Test Report</p>
          </div>
       </nav>
       <div class="main_conainer">
@@ -269,7 +269,7 @@
          </div>
       </div>
       <div class="text-center">
-         <p class="text-center">Copyright &copy; 2026, GE HealthCare</p>
+         <p class="text-center"><template>Copyright &copy; {{copyrightYear}}, {{copyrightOrganization}}</template></p>
       </div>
       <!-- data -->
       <script src="../js/jquery-3.2.1.min.js"></script>
