--- a/src/examples/Calc/templates/index.html
+++ b/src/examples/Calc/templates/index.html
@@ -16,7 +16,7 @@
       <nav class="navbar">
          <div class="container-fluid" style="background-color: #6400A0; color:#fff">
             <p class="navbar-text" style="float: left">Dashboard</p>
-            <p class="navbar-text">Cucumber BDD Test Report</p>
+            <p class="navbar-text">Cucumber Cpp Test Report</p>
          </div>
       </nav>
       <div class="main_conainer">
@@ -271,7 +271,7 @@
          </div>
       </div>
       <div>
-         <p class="text-center">Copyright &copy; 2026, GE HealthCare</p>
+         <p class="text-center"><template>Copyright &copy; {{copyrightYear}}, {{copyrightOrganization}}</template></p>
       </div>
       <!-- data -->
       <script src="js/jquery-3.2.1.min.js"></script>
