Update README.md and add image for Cuke-Cpp documentation

--- a/src/examples/Calc/templates/index.html
+++ b/src/examples/Calc/templates/index.html
@@ -5,7 +5,7 @@
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>OPUS BDD Test Report</title>
+      <title>Cuke CPP Test Report</title>
       <link href="css/bootstrap.min.css" rel="stylesheet" />
       <link href="css/font-awesome.min.css" rel="stylesheet" />
       <link href="css/dataTables.bootstrap.min.css" rel="stylesheet" />
@@ -16,7 +16,7 @@
       <nav class="navbar">
          <div class="container-fluid" style="background-color: #6400A0; color:#fff">
             <p class="navbar-text" style="float: left">Dashboard</p>
-            <p class="navbar-text">Cucumber Cpp Test Report</p>
+            <p class="navbar-text">Cuke Cpp Test Report</p>
          </div>
       </nav>
       <div class="main_conainer">
