--- a/src/examples/Calc/templates/feature.html
+++ b/src/examples/Calc/templates/feature.html
@@ -4,7 +4,7 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Cypress Cucumber UI Test Automation - Execution Report</title>
+      <title>Cuke CPP Test Automation - Execution Report</title>
       <link rel="stylesheet" href="../css/bootstrap.min.css">
       <link rel="stylesheet" href="../css/font-awesome.min.css">
       <link rel="stylesheet" href="../css/feature.css">
@@ -19,7 +19,7 @@
             </div>
             <p class="navbar-text" style="float: left">Features Overview
             </p>
-            <p class="navbar-text">Cucumber Cpp Test Report</p>
+            <p class="navbar-text">Cuke Cpp Test Report</p>
          </div>
       </nav>
       <div class="main_conainer">
