--- a/examples/Calc/templates/feature.html
+++ b/examples/Calc/templates/feature.html
@@ -43,7 +43,7 @@
          </div>
          <div class="clearfix"></div>
          <div class="row">
-            <div class="col-md-6 col-lg-6 col-xs-12">
+            <div class="col-md-6 col-lg-4 col-xs-12">
                <div class="x_panel fixed_height_320">
                   <div class="x_title">
                      <h2>Scenarios</h2>
@@ -126,7 +126,106 @@
                   </div>
                </div>
             </div>
-            <div class="col-lg-6 col-xs-12">
+            <div class="col-md-6 col-lg-4 col-xs-12">
+               <div class="x_panel fixed_height_320">
+                  <div class="x_title">
+                     <h2>Steps</h2>
+                     <ul class="nav navbar-right panel_toolbox">
+                        <li>
+                           <a class="collapse-link">
+                           <i class="fa fa-chevron-up"></i>
+                           </a>
+                        </li>
+                     </ul>
+                     <div class="clearfix"></div>
+                  </div>
+                  <div class="x_content">
+                     <table class="chart">
+                        <tbody>
+                           <tr>
+                              <th>
+                                 <p>Chart</p>
+                              </th>
+                              <th>
+                                 <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
+                                    <p class="">Status</p>
+                                 </div>
+                                 <div class="col-lg-5 col-md-5 col-sm-5 col-xs-5">
+                                    <p class="" style="float:right;">Progress</p>
+                                 </div>
+                              </th>
+                           </tr>
+                           <tr>
+                              <td class="chart">
+                                 <canvas id="step-chart" width="140" height="140" style="display: block;"></canvas>
+                                 <div class="total"><template>{{totalSteps}}</template></div>
+                              </td>
+                              <td>
+                                 <table class="tile_info">
+                                    <tbody>
+                                       <template>
+                                       <tr>
+                                          <td>
+                                             <p data-toggle="tooltip" data-placement="left" title="" data-original-title="Step passed">
+                                                <i class="fa fa-check-circle passed-color"></i>
+                                                Passed
+                                             </p>
+                                          </td>
+                                          <td class="percentage">{{passedStepsPercent}} %</td>
+                                       </tr>
+                                       <tr>
+                                          <td>
+                                             <p data-toggle="tooltip" data-placement="left" title="" data-original-title="Step failed">
+                                                <i class="fa fa-exclamation-circle failed-color"></i>
+                                                Failed
+                                             </p>
+                                          </td>
+                                          <td class="percentage">{{failedStepsPercent}} %</td>
+                                       </tr>
+                                       {{#totalSkippedSteps}}
+                                       <tr>
+                                          <td>
+                                             <p data-toggle="tooltip" data-placement="left" title="" data-original-title="Step is skipped">
+                                                <i class="fa fa-arrow-circle-right skipped-color"></i>
+                                                Skipped
+                                             </p>
+                                          </td>
+                                          <td class="percentage">{{skippedStepsPercent}} %</td>
+                                       </tr>
+                                       {{/totalSkippedSteps}}
+                                       {{#totalAmbiguousSteps}}
+                                       <tr>
+                                          <td>
+                                             <p data-toggle="tooltip" data-placement="left" title="" data-original-title="Step is ambiguous">
+                                                <i class="fa fa-arrow-circle-right ambiguous-color"></i>
+                                                Ambiguous
+                                             </p>
+                                          </td>
+                                          <td class="percentage">{{ambiguousStepsPercent}} %</td>
+                                       </tr>
+                                       {{/totalAmbiguousSteps}}
+                                       {{#totalUndefinedSteps}}
+                                       <tr>
+                                          <td>
+                                             <p data-toggle="tooltip" data-placement="left" title="" data-original-title="Step is undefined">
+                                                <i class="fa fa-arrow-circle-right undefined-color"></i>
+                                                Undefined
+                                             </p>
+                                          </td>
+                                          <td class="percentage">{{undefinedStepsPercent}} %</td>
+                                       </tr>
+                                       {{/totalUndefinedSteps}}
+                                    </template>
+                                    </tbody>
+                                 </table>
+                              </td>
+                           </tr>
+                        </tbody>
+                     </table>
+                  </div>
+               </div>
+            </div>
+            <div class="col-lg-4 col-xs-12">
                <div class="x_panel fixed_height_320">
                   <div class="x_title">
                      <h2>Run info</h2>
@@ -239,7 +338,7 @@
                         </ul>
                         <div class="clearfix"></div>
                      </div>
-		     <div class="x_content" style={{defaultStyle}}>
+                     <div class="x_content" style={{defaultStyle}}>
                         {{#steps}}
                         <div class="scenario-step-container">
                            <div class="label" data-toggle="tooltip" data-placement="top" title="{{status}}">
