--- a/examples/Calc/templates/feature.html
+++ b/examples/Calc/templates/feature.html
@@ -60,10 +60,10 @@
                      <table class="chart">
                         <tbody>
                            <tr>
-                              <th>
+                              <th id="chart">
                                  <p>Chart</p>
                               </th>
-                              <th>
+                              <th id="status">
                                  <div class="col-lg-7 col-md-7 col-sm-7 col-xs-7">
                                     <p class="">Status</p>
                                  </div>
@@ -79,6 +79,7 @@
                               </td>
                               <td>
                                  <table class="tile_info">
+                                    <thead></thead>
                                     <tbody>
                                        <template>
                                        <tr>
@@ -116,7 +117,7 @@
                               </td>
                            </tr>
                            <tr>
-                              <th> Total duration:</th>
+                              <th id="duration"> Total duration:</th>
                            </tr>
                            <tr>
                               <td><template>{{formattedTotalDuration}}</template></td>
@@ -162,6 +163,7 @@
                               </td>
                               <td>
                                  <table class="tile_info">
+                                    <thead></thead>
                                     <tbody>
                                        <template>
                                        <tr>
@@ -241,6 +243,7 @@
                   <div class="x_content">
                      <div class="dashboard-widget-content">
                         <table class="quick-list">
+                           <thead></thead>
                            <tbody>
                               <tr>
                                  <td class="meta-data-title">Execution Start Time</td>
