--- a/examples/Calc/templates/index.html
+++ b/examples/Calc/templates/index.html
@@ -56,6 +56,7 @@
                            </td>
                            <td>
                               <table class="tile_info">
+                                 <thead></thead>
                                  <tr>
                                     <td>
                                        <p data-toggle="tooltip" data-placement="left" title="Features passed">
@@ -130,6 +131,7 @@
                            </td>
                            <td>
                               <table class="tile_info">
+                                 <thead></thead>
                                  <tr>
                                     <td>
                                        <p data-toggle="tooltip" data-placement="left" title="Scenario passed">
@@ -181,6 +183,7 @@
                   <div class="x_content">
                      <div class="dashboard-widget-content">
                         <table class="quick-list">
+                           <thead></thead>
                            <tbody>
                               <tr>
                                  <td class="meta-data-title">Execution Start Time</td>
