address sonarqube issues

--- a/examples/Calc/templates/feature.html
+++ b/examples/Calc/templates/feature.html
@@ -79,7 +79,7 @@
                               </td>
                               <td>
                                  <table class="tile_info">
-                                    <thead></thead>
+                                    <th id="scenario"></th>
                                     <tbody>
                                        <template>
                                        <tr>
@@ -163,7 +163,7 @@
                               </td>
                               <td>
                                  <table class="tile_info">
-                                    <thead></thead>
+                                    <th id="step"></th>
                                     <tbody>
                                        <template>
                                        <tr>
@@ -243,7 +243,7 @@
                   <div class="x_content">
                      <div class="dashboard-widget-content">
                         <table class="quick-list">
-                           <thead></thead>
+                           <th id="execution"></th>
                            <tbody>
                               <tr>
                                  <td class="meta-data-title">Execution Start Time</td>
