--- a/examples/Calc/templates/index.html
+++ b/examples/Calc/templates/index.html
@@ -56,7 +56,7 @@
                            </td>
                            <td>
                               <table class="tile_info">
-                                 <thead></thead>
+                                 <th id="feature"></th>
                                  <tr>
                                     <td>
                                        <p data-toggle="tooltip" data-placement="left" title="Features passed">
@@ -131,7 +131,7 @@
                            </td>
                            <td>
                               <table class="tile_info">
-                                 <thead></thead>
+                                 <th id="scenario"></th>
                                  <tr>
                                     <td>
                                        <p data-toggle="tooltip" data-placement="left" title="Scenario passed">
@@ -183,7 +183,7 @@
                   <div class="x_content">
                      <div class="dashboard-widget-content">
                         <table class="quick-list">
-                           <thead></thead>
+                           <th id="execution"></th>
                            <tbody>
                               <tr>
                                  <td class="meta-data-title">Execution Start Time</td>
